[gd_scene load_steps=12 format=2]

[ext_resource path="res://TitleScreen/title.png" type="Texture" id=1]
[ext_resource path="res://World/floor.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen/title_host1.png" type="Texture" id=3]
[ext_resource path="res://TitleScreen/title_join2.png" type="Texture" id=4]
[ext_resource path="res://TitleScreen/title_join1.png" type="Texture" id=5]
[ext_resource path="res://TitleScreen/title_host2.png" type="Texture" id=6]
[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://TitleScreen/title_settings_button1.png" type="Texture" id=8]
[ext_resource path="res://TitleScreen/title_settings_button2.png" type="Texture" id=9]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 direction = vec2(0.7,0.7);
uniform float speed_scale = 1;

void fragment(){

     vec2 move = direction * TIME * speed_scale;

     COLOR = texture(TEXTURE, UV + move);   
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/direction = Vector2( 0.7, 0.7 )
shader_param/speed_scale = 1.0

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 7 )

[node name="ScrollBackground" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_left = -19.0
margin_top = -24.0
margin_right = 159.0
margin_bottom = 84.0
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Sprite" parent="."]
position = Vector2( 500, 100 )
scale = Vector2( 7, 7 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="SettingsMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="TextureButton" parent="MainMenu"]
margin_left = 320.0
margin_top = 280.0
margin_right = 384.0
margin_bottom = 298.0
rect_scale = Vector2( 6, 6 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="TextureButton" parent="MainMenu"]
margin_left = 320.0
margin_top = 410.0
margin_right = 384.0
margin_bottom = 428.0
rect_scale = Vector2( 6, 6 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingButton" type="TextureButton" parent="MainMenu"]
margin_left = 14.0
margin_top = 518.0
margin_right = 25.0
margin_bottom = 529.0
rect_scale = Vector2( 6, 6 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="MainMenu/Host" to="." method="_on_Host_button_down"]
[connection signal="button_down" from="MainMenu/Join" to="." method="_on_Join_button_down"]
[connection signal="button_down" from="MainMenu/SettingButton" to="." method="_on_SettingButton_button_down"]
